Fixed the style of the definition and example to make them look more organized and aligned with each other

--- a/src/Components/ShowWordDetails/show-word-details.css
+++ b/src/Components/ShowWordDetails/show-word-details.css
@@ -51,15 +51,22 @@
     margin-left: 10%;
 }
 
-.word-definition
+.word-attribute
 {
     /* margin-left: 2%; */
+    margin-left: 2%;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-between; */
     align-items: center;
 }
 
-.word-definition h2
+.word-attribute h3
 {
+    margin-right: 10%;
+}
 
+.word-definition
+{
+    position: relative;
+    right: 1%;
 }
